Tue Jan  1 00:02:12 2002  Nanbor Wang <nanbor@cs.wustl.edu>

        * ace/ace_dll.vcp: Added String_Base_Const.*.

Mon Dec 31 09:32:59 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Hash_Map_Manager_T.h: Added ACE_UNIMPLEMENTED_FUNC() for the
	  assignment operator and copy constructor of class
 	  ACE_Hash_Map_Manager_Ex.  Thanks to Johnny Willemsen for
 	  reporting this.

Mon Dec 31 16:33:17 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/OS.{h,i}:
          Added ACE_OS::freopen. This method reassigns an existing
          stream with a new stream. This is not supported on WinCE

Mon Dec 31 15:09:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * apps/drwho/BM_Server.cpp:
        * apps/drwho/Options.cpp:
        * apps/drwho/PM_Client.cpp:
        * apps/drwho/PMC_Ruser.cpp:
        * apps/drwho/PMC_Ruser.cpp:
        * apps/gperf/src/Options.cpp:
        * docs/tutorials/010/message_queue.cpp:
        * docs/tutorials/011/message_queue.cpp:
        * docs/tutorials/012/message_queue.cpp:
        * docs/tutorials/013/message_queue.cpp:
        * examples/IOStream/server/iostream_server.cpp:
        * examples/Reactor/WFMO_Reactor/test_multithreading.cpp:
        * netsvcs/clients/Logger/direct_logging.cpp:
        * tests/Pipe_Test.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_Timeout.i:
          Changed occurences of atoi with ACE_OS::atoi because the normal
          atoi gives problems when compiling with ACE_USES_WCHAR defined

Mon Dec 31 14:40:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/Get_Opt.cpp:
          Replaced ACE_TEXT by ACE_LIB_TEXT because ACE_LIB_TEXT must be used
          within the ACE library instead of ACE_TEXT

Sun Dec 30 16:54:18 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Parse_Node.cpp: Now that ACE::strnew() checks for a NULL
	  parameter, we can remove the checks in the ACE code.
